# xdg-desktop-file-override

./: Cargo.toml  README.md
docs/: xdg-desktop-file-override.md
src/: main.rs  xdg.rs
