[package]
name = "xdg-desktop-file-override"
version = "0.1.0"
edition = "2021"

include = [
        "src/**",
        "docs/**",
        "Cargo.toml",
        "Cargo.lock",
        "README.md",
        "LICENSE",
]

[dependencies]
clap = "4.0"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tempfile = "3.2"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.2"
